# verbx

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  generate_pdf.sh  install.sh  package.json  pyproject.toml  scripts_check_typography.py  scripts_enrich_reference_metadata.py  scripts_generate_book_supplements.py  scripts_generate_docs_pdf.py  scripts_generate_glossary.py  scripts_generate_plugin_guide.py  scripts_normalize_composition_years.py  scripts_sort_literature.py
.github/workflows/: ci-gpu.yml  ci.yml  install-verify.yml  release.yml
IRs/: README.md  ir_fdn_90s.flac  ir_fdn_90s.flac.ir.meta.json  ir_hybrid_240s.flac  ir_hybrid_240s.flac.ir.meta.json  ir_hybrid_60s.flac  ir_hybrid_60s.flac.ir.meta.json  ir_modal_180s.flac  ir_modal_180s.flac.ir.meta.json  ir_modal_360s.flac  ir_modal_360s.flac.ir.meta.json  ir_stochastic_120s.flac  ir_stochastic_120s.flac.ir.meta.json
docs/: AI_AUGMENTATION.md  CLI_REFERENCE.md  COMPATIBILITY_MATRIX.md  DXF_TRACE_MVP.md  EXTREME_COOKBOOK.md  FAQ.md  FIGURES.md  FINITE_ELEMENT_MODELING.md  GLOSSARY.md  HISTORY_OF_ARTIFICIAL_REVERBERATION.md  HOMEBREW.md  HOMEWORK_ASSIGNMENTS.md  IMMERSIVE_AUDIO.md  INTRODUCTORY_BLOCK_DIAGRAMS.md  IR_MORPH_QA.md  IR_SYNTHESIS.md  LAUNCH_EXAMPLES_CANONICAL.txt  LAUNCH_HARDENING.md  LAUNCH_WEEK_DEMO_PINS.md  MICROTONAL_SCALA_WORKFLOWS.md  MUSICAL_PIECES_APPENDIX.md  MUSICAL_PIECES_EXPANSION.md  NATIVE_PARITY.md  OPEN_SOURCE_IMAGE_PORTFOLIO.md  PLUGIN_GUIDE.md  PROJECT_CRITICISMS.md  PUBLIC_ALPHA_NOTES.md  PYPI_PUBLISH_SETUP.md  REFERENCES.md  ROADMAP.md  ROADMAP_NEXT_4_WEEKS.md  SCHEMAS.md  SCHEMA_REFERENCE.md  SOFA_FEASIBILITY.md  USERGUIDE.md  reference_metadata.json
docs/assets/: caption_tables.lua  directional_quotes.lua  pandoc_pdf_preamble.tex  verbx_card_illustrations.tex  verbx_index.ist
docs/assets/open_source_portfolio/: ATTRIBUTIONS.md
docs/assets/reverb_history/: ATTRIBUTIONS.md
docs/benchmarks/: README.md  ci_baseline.json
docs/notebooks/: 01_render_and_analyze.ipynb  02_generate_ir.ipynb  03_corpus_pipeline.ipynb  README.md  dataset_workflow.ipynb  research_workflow.ipynb
docs/superpowers/plans/: 2026-07-10-verbx-plugin-foundation.md
docs/superpowers/specs/: 2026-07-10-verbx-auv3-vst3-plugin-design.md
examples/: dataset_augmentation.ipynb
examples/audio/: README.md  example_pack.meta.json  realistic_examples.meta.json
examples/scales/: 19edo.scl  5_limit_major.scl  README.md  bohlen_pierce_13edo.scl
man/man1/: verbx-analyze.1  verbx-batch.1  verbx-c.1  verbx-dereverb.1  verbx-ir.1  verbx-render.1  verbx.1
native/verbx_c/: CMakeLists.txt  README.md
native/verbx_c/include/verbx_c/: algo_reverb.h  audio.h  cli.h  plugin_params.h  plugin_realtime.h  render.h  version.h  wav_io.h
native/verbx_c/src/: algo_reverb.c  audio.c  cli.c  main.c  plugin_params.c  plugin_realtime.c  render.c  wav_io.c
native/verbx_c/tests/: test_plugin_params.c  test_plugin_realtime.c
native/verbx_plugin/: CMakeLists.txt  README.md
native/verbx_plugin/src/: VerbXEditorInteractionSmoke.cpp  VerbXPluginEditor.cpp  VerbXPluginEditor.h  VerbXPluginHostSmoke.cpp  VerbXPluginProcessor.cpp  VerbXPluginProcessor.h
npm/: verbx.js
packaging/homebrew/: verbx.rb
scripts/: benchmark_dereverb_quality.py  benchmark_render_baseline.py  build_verbx_c.sh  check_launch_examples.py  check_release_health.py  compare_native_render_parity.py  expand_references_crossref.py  generate_ai_augmentation_figures.py  generate_cli_reference.py  generate_figure_guide.py  generate_immersive_audio_figures.py  generate_ir_bank.py  generate_ir_bank.sh  generate_ir_library.py  generate_modal_fe_figures.py  generate_realistic_audio_examples.py  generate_repo_qr.py  generate_reverb_primer_assets.py  generate_terminal_screenshots.py  generate_userguide_figures.py  import_jot_bibliography.py  install.sh  install_verbx_c.sh  refresh_homebrew_formula.sh
src/verbx/: __init__.py  __main__.py  api.py  cli.py  config.py  logging.py
src/verbx/analysis/: __init__.py  analyzer.py  edr.py  fdn_qa.py  features_spectral.py  features_time.py  framewise.py  reverb_metrics.py  room_size.py  spatial_metrics.py
src/verbx/commands/: __init__.py  analyze.py  batch.py  cache.py  common.py  compare.py  dereverb.py  immersive.py  ir.py  ir_impl.py  presets.py  realtime.py  render.py  room_model.py  safety.py  suggest.py  system.py  validators.py
src/verbx/core/: __init__.py  accel.py  algo_proxy.py  algo_reverb.py  ambient.py  augmentation.py  automation.py  batch_scheduler.py  control_targets.py  convolution_reverb.py  dereverb.py  early_reflections.py  electromechanical.py  engine_base.py  fdn_capabilities.py  fdn_matrix.py  feature_vector.py  freeze.py  immersive.py  loudness.py  modulation.py  pipeline.py  render_report.py  repeat.py  room_geometry.py  schema_versions.py  shimmer.py  spatial.py  tempo.py
src/verbx/io/: __init__.py  audio.py  progress.py  realtime.py
src/verbx/ir/: __init__.py  early_reflections.py  fitting.py  generator.py  materials.py  metrics.py  modes_fdn.py  modes_modal.py  modes_stochastic.py  morph.py  resonator.py  scala.py  shaping.py  sofa.py  trace.py  tuning.py
tests/: test_accel.py  test_algo_track_c.py  test_ambient.py  test_analysis.py  test_analysis_real.py  test_api.py  test_batch_scheduler.py  test_cli.py  test_command_validators.py  test_convolution_streaming.py  test_cuda_paths.py  test_dereverb.py  test_docs_pdf.py  test_docs_sync.py  test_electromechanical.py  test_engines.py  test_fdn_capabilities.py  test_fdn_qa.py  test_feature_vector.py  test_features_time.py  test_freeze.py  test_hoa_validation.py  test_immersive.py  test_io.py  test_ir.py  test_ir_morph.py  test_loudness.py  test_modulation.py  test_native_parity_compare.py  test_native_scaffold.py  test_npm_launcher.py  test_presets.py  test_proxy_stream_parity.py  test_realtime.py  test_repeat.py  test_room_geometry.py  test_room_size.py  test_scala_tuning.py  test_shimmer.py  test_sofa_cli.py  (+1 more)
tests/fixtures/: native_render_parity_contract.json
(+3 files in other folders)
