[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verbx"
version = "0.1.0"
description = "Extreme ambient audio reverberator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Colby Leider", email = "colby@example.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "typer",
  "rich",
  "numpy",
  "scipy",
  "soundfile",
  "librosa",
  "numba",
]

[project.scripts]
verbx = "verbx.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/verbx"]
