[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "verbx"
version = "0.6.0"
description = "Production-grade CLI for extreme reverb processing and analysis."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "verbx contributors" }]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "numpy>=1.26.0",
  "scipy>=1.11.0",
  "soundfile>=0.12.1",
  "librosa>=0.10.2",
  "pyloudnorm>=0.1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "pyright>=1.1.389",
]

[project.scripts]
verbx = "verbx.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/verbx"]

[tool.hatch.envs.default]
dependencies = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "pyright>=1.1.389",
]

[tool.hatch.envs.default.scripts]
lint = "ruff check ."
format = "ruff format ."
test = "pytest"
typecheck = "pyright"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/verbx/cli.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = "none"
reportUntypedFunctionDecorator = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"

[tool.pytest.ini_options]
pythonpath = ["src"]
