[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "verbx"
version = "0.7.7"
description = "Research-grade CLI for extreme reverb processing and analysis."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "verbx contributors" }]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "numpy>=1.26.0",
  "scipy>=1.11.0",
  "soundfile>=0.12.1",
  "librosa>=0.10.2",
  "pyloudnorm>=0.1.1",
]

[project.optional-dependencies]
sofa = [
  "h5py>=3.10.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "pyright>=1.1.389",
]

[project.scripts]
verbx = "verbx.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/verbx"]

[tool.hatch.build.targets.sdist]
include = ["src/verbx", "man", "tests", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.hatch.build.targets.wheel.shared-data]
"man/man1" = "share/man/man1"

[tool.hatch.envs.default]
dependencies = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "pyright>=1.1.389",
]

[tool.hatch.envs.default.scripts]
lint = "ruff check ."
format = "ruff format ."
test = "pytest"
typecheck = "pyright"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/verbx/cli.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"

# reportMissingTypeStubs: legitimate — librosa, soundfile, pyloudnorm, numba
# ship no type stubs and upstream stubs are incomplete / absent.
reportMissingTypeStubs = "none"

# reportUntypedFunctionDecorator: legitimate — typer @app.command() decorators
# and the optional @numba.njit decorator are not typed in their libraries.
reportUntypedFunctionDecorator = "none"

# reportUnknownMemberType / reportUnknownVariableType / reportUnknownArgumentType:
# These are suppressed project-wide because numpy typing (NDArray[float64],
# ufunc return types) and scipy's stubs produce cascading "Unknown" inference
# across DSP code.  The goal for 0.7.7 is to shrink these to per-file
# suppressions once the dict[str, Any] report contracts in pipeline.py are
# replaced by typed dataclasses (roadmap item 3).
# TODO(0.7.7): move to per-file pyright: ignore after pipeline.py RenderReport
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"

[tool.pytest.ini_options]
pythonpath = ["src"]
